--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -11,7 +11,7 @@
         android:id="@+id/iv_top_splashscreen"
         android:layout_width="@dimen/_124sdp"
         android:layout_height="@dimen/_128sdp"
-        android:src="@drawable/ic_splashscreen"
+        android:src="@drawable/ic_logo"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
