--- a/app/src/main/res/layout/layout_intro_two.xml
+++ b/app/src/main/res/layout/layout_intro_two.xml
@@ -2,39 +2,42 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
+
     <TextView
         android:id="@+id/tv_title_intro"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_100sdp"
-        android:layout_marginEnd="@dimen/_50sdp"
         android:layout_marginStart="@dimen/_30sdp"
+        android:layout_marginBottom="@dimen/_10sdp"
+        android:fontFamily="@font/poppins_bold"
         android:text="@string/text_title_intro_two"
         android:textColor="@color/black_font"
-        android:fontFamily="@font/poppins_semi_bold"
         android:textSize="@dimen/_22ssp"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintBottom_toTopOf="@id/tv_desc_intro"
+        app:layout_constraintStart_toStartOf="parent"/>
+
     <TextView
         android:id="@+id/tv_desc_intro"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_30sdp"
-        android:layout_marginStart="@dimen/_30sdp"
-        android:layout_marginBottom="@dimen/_30sdp"
+        android:layout_marginBottom="@dimen/_26sdp"
+        android:fontFamily="@font/poppins_regular"
         android:text="@string/text_desc_intro_two"
-        android:fontFamily="@font/scada_regular"
-        android:textSize="@dimen/_16ssp"
-        app:layout_constraintTop_toBottomOf="@id/tv_title_intro"/>
+        android:textSize="@dimen/_14ssp"
+        android:textColor="@color/black_font"
+        app:layout_constraintBottom_toTopOf="@id/iv_intro"
+        app:layout_constraintStart_toStartOf="@id/tv_title_intro"/>
+
     <ImageView
         android:id="@+id/iv_intro"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_intro_second"
-        android:layout_marginTop="@dimen/_30sdp"
-        android:layout_marginStart="@dimen/_30sdp"
-        android:layout_marginEnd="@dimen/_30sdp"
-        app:layout_constraintTop_toBottomOf="@id/tv_desc_intro"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
