--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="TextInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-        <item name="boxStrokeColor">@color/colorPrimary</item>
+        <item name="boxStrokeColor">@drawable/text_input_layout_color_state</item>
+        <item name="android:textColor">@color/black_font</item>
+        <item name="android:textColorHint">@color/text_color_hint</item>
+        <item name="fontFamily">@font/poppins_regular</item>
+        <item name="boxBackgroundColor">@color/bg_text_input_layout</item>
+    </style>
+
+    <style name="SpinnerStyle" parent="Widget.AppCompat.Spinner">
+        <item name="android:textColor">@color/black_font</item>
     </style>
 </resources>
