--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="primary">#FF672C</color>
     <color name="black_font">#403F3E</color>
     <color name="unselected_indicator">#B6AA9E</color>
+    <color name="fillColor">#F1EFED</color>
+    <color name="hintColor">#A9A8A7</color>
 </resources>
