--- a/app/src/main/res/layout/activity_edit_delete.xml
+++ b/app/src/main/res/layout/activity_edit_delete.xml
@@ -14,7 +14,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/_22sdp"
+            android:layout_marginStart="@dimen/_22sdp"
+            android:layout_marginEnd="@dimen/_22sdp">
 
             <TextView
                 android:id="@+id/tv_recipe_input_link"
@@ -23,31 +26,21 @@
                 android:layout_marginTop="@dimen/_50sdp"
                 android:fontFamily="@font/poppins_regular"
                 android:text="@string/text_copy_link_image"
-                android:textColor="@color/black_font"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="@id/til_recipe_input_link" />
+                android:textSize="@dimen/_14ssp"
+                android:textColor="@color/black_font"/>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_recipe_input_link"
                 style="@style/TextInputLayoutStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_22sdp"
-                android:layout_marginEnd="@dimen/_22sdp"
-                android:layout_marginTop="@dimen/_8sdp"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:hint="@string/text_hint_link_image"
-                app:endIconMode="clear_text"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_recipe_input_link">
-
+                app:endIconMode="clear_text">
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/et_recipe_input_link"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"
                     android:maxLines="1" />
-
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
@@ -57,16 +50,14 @@
                 android:layout_marginTop="@dimen/_12sdp"
                 android:fontFamily="@font/poppins_regular"
                 android:text="@string/text_hint_recipe_name"
-                android:textColor="@color/black_font"
-                app:layout_constraintTop_toBottomOf="@id/til_recipe_input_link"
-                app:layout_constraintStart_toStartOf="@id/til_recipe_name" />
+                android:textSize="@dimen/_14ssp"
+                android:textColor="@color/black_font" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_recipe_name"
                 style="@style/TextInputLayoutStyle"
                 android:layout_marginTop="@dimen/_10sdp"
                 app:endIconMode="clear_text">
-
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/et_recipe_name"
                     style="@style/TextEditLayoutStyle"
@@ -81,24 +72,18 @@
                 android:layout_marginTop="@dimen/_12sdp"
                 android:fontFamily="@font/poppins_regular"
                 android:text="@string/text_recipe_categories"
-                android:textColor="@color/black_font"
-                app:layout_constraintTop_toBottomOf="@id/til_recipe_name"
-                app:layout_constraintStart_toStartOf="@id/spinner_categories" />
+                android:textSize="@dimen/_14ssp"
+                android:textColor="@color/black_font"/>
 
             <Spinner
                 android:id="@+id/spinner_categories"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="60dp"
                 style="@style/SpinnerStyle"
                 android:entries="@array/categories"
-                android:layout_marginTop="@dimen/_8sdp"
-                android:layout_marginStart="@dimen/_22sdp"
-                android:layout_marginEnd="@dimen/_22sdp"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:paddingStart="8dp"
-                android:paddingEnd="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_recipe_categories" />
+                android:paddingEnd="8dp"/>
 
             <TextView
                 android:id="@+id/tv_recipe_ingredients"
@@ -107,30 +92,19 @@
                 android:layout_marginTop="@dimen/_12sdp"
                 android:fontFamily="@font/poppins_regular"
                 android:text="@string/text_hint_recipe_ingredients"
-                android:textColor="@color/black_font"
-                app:layout_constraintTop_toBottomOf="@id/spinner_categories"
-                app:layout_constraintStart_toStartOf="@id/til_recipe_ingredients" />
+                android:textSize="@dimen/_14ssp"
+                android:textColor="@color/black_font" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_recipe_ingredients"
                 style="@style/TextInputLayoutStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_22sdp"
-                android:layout_marginEnd="@dimen/_22sdp"
-                android:layout_marginTop="@dimen/_8sdp"
-                android:hint="@string/text_ingredients"
-                app:endIconMode="clear_text"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_recipe_ingredients">
-
+                android:layout_marginTop="@dimen/_10sdp"
+                app:endIconMode="clear_text">
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/et_recipe_ingredients"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:inputType="textMultiLine" />
-
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
@@ -141,29 +115,17 @@
                 android:fontFamily="@font/poppins_regular"
                 android:text="@string/text_recipe_instructions"
                 android:textColor="@color/black_font"
-                app:layout_constraintTop_toBottomOf="@id/til_recipe_ingredients"
-                app:layout_constraintStart_toStartOf="@id/til_recipe_instruction" />
+                android:textSize="@dimen/_14ssp"/>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_recipe_instruction"
                 style="@style/TextInputLayoutStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_22sdp"
-                android:layout_marginEnd="@dimen/_22sdp"
-                android:layout_marginTop="@dimen/_8sdp"
-                android:hint="@string/text_instructions"
-                app:endIconMode="clear_text"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_recipe_instructions">
-
+                app:endIconMode="clear_text">
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/et_recipe_instructions"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:inputType="textMultiLine" />
-
             </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
