--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="TextInputLayoutStyle" parent="ThemeOverlay.Material3.TextInputEditText.FilledBox">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/_42sdp</item>
         <item name="android:textColor">@color/black_font</item>
-        <item name="android:layout_marginStart">@dimen/_22sdp</item>
-        <item name="android:layout_marginEnd">@dimen/_22sdp</item>
         <item name="boxBackgroundColor">@color/fillColor</item>
         <item name="boxStrokeWidth">0dp</item>
         <item name="boxStrokeWidthFocused">0dp</item>
@@ -14,6 +13,7 @@
         <item name="boxCornerRadiusTopEnd">10dp</item>
         <item name="boxCornerRadiusTopStart">10dp</item>
     </style>
+
     <style name="TextInputMultiStyle" parent="ThemeOverlay.Material3.TextInputEditText.FilledBox">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -28,19 +28,23 @@
         <item name="boxCornerRadiusTopEnd">10dp</item>
         <item name="boxCornerRadiusTopStart">10dp</item>
     </style>
+
     <style name="TextEditLayoutStyle" parent="ThemeOverlay.Material3.TextInputEditText.FilledBox">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="hintEnabled">false</item>
         <item name="android:textColor">@color/black_font</item>
-        <item name="android:gravity">center_vertical</item></style>
-    <style name="TextInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-        <item name="boxStrokeColor">@drawable/text_input_layout_color_state</item>
-        <item name="android:textColor">@color/black_font</item>
-        <item name="android:textColorHint">@color/text_color_hint</item>
-        <item name="fontFamily">@font/poppins_regular</item>
-        <item name="boxBackgroundColor">@color/bg_text_input_layout</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textSize">@dimen/_14ssp</item>
     </style>
+
+    <!--    <style name="TextInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->
+    <!--        <item name="boxStrokeColor">@drawable/text_input_layout_color_state</item>-->
+    <!--        <item name="android:textColor">@color/black_font</item>-->
+    <!--        <item name="android:textColorHint">@color/text_color_hint</item>-->
+    <!--        <item name="fontFamily">@font/poppins_regular</item>-->
+    <!--        <item name="boxBackgroundColor">@color/bg_text_input_layout</item>-->
+    <!--    </style>-->
 
     <style name="SpinnerStyle" parent="Widget.AppCompat.Spinner">
         <item name="android:textColor">@color/black_font</item>
