--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="primary">#FF672C</color>
     <color name="black_font">#403F3E</color>
     <color name="unselected_indicator">#B6AA9E</color>
+    <color name="bg_text_input_layout">#F1EFED</color>
 </resources>
